Front Page: Set `max-width` on headings to avoid overflow.

--- a/source/wp-content/themes/wporg-news-2021/sass/page/front-page/_latest-release.scss
+++ b/source/wp-content/themes/wporg-news-2021/sass/page/front-page/_latest-release.scss
@@ -31,6 +31,7 @@ body.news-front-page .front__latest-release {
 		line-height: 1;
 		padding: var(--wp--custom--alignment--edge-spacing) 0;
 		width: calc(var(--wp--custom--layout--content-meta-size) - 32px);
+		max-width: 100%;
 
 		@include break-medium() {
 			margin-left: var(--wp--custom--alignment--edge-spacing);
